UIEH-1238 Fix eslint and prop types warnings and errors

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "stripes serve",
     "build": "stripes build --output dist",
     "test": "yarn run test:jest",
-    "test:jest": "jest --ci --coverage",
+    "test:jest": "jest --ci --coverage --verbose",
+    "test:jest:color": "jest --ci --coverage --verbose --color",
     "test:bigtest": "stripes test karma",
     "lint": "eslint ./ && stylelint \"src/**/*.css\"",
     "eslint": "eslint ./",
@@ -64,6 +65,7 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.9",
     "rxjs": "^6.6.3",
     "sinon": "^6.3.5",
     "stylelint": "^9.5.0",
