--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     }
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.10.5",
@@ -31,20 +32,19 @@
     "@bigtest/interactor": "^0.7.2",
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
-    "@folio/eslint-config-stripes": "^5.0.0",
+    "@folio/eslint-config-stripes": "^6.1.0",
     "@folio/stripes": "^7.0.0",
-    "@folio/stripes-cli": "^2.0.0",
+    "@folio/stripes-cli": "^2.4.0",
     "@folio/stripes-core": "^8.0.0",
     "@formatjs/cli": "^4.2.20",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^11.0.2",
     "@testing-library/react-hooks": "^5.1.2",
     "axe-core": "~4.1.4",
-    "babel-eslint": "^10.0.3",
     "babel-jest": "^26.3.0",
     "babel-polyfill": "^6.26.0",
     "chai": "^4.0.2",
-    "eslint": "^6.2.1",
+    "eslint": "^7.32.0",
     "eslint-plugin-jest": "^24.1.3",
     "faker": "4.1.0",
     "history": "^5.0.0",
