--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "react-router-dom": "^5.2.0"
   },
   "resolutions": {
-    "moment": "~2.24.0"
+    "moment": "~2.24.0",
+    "@vue/compiler-sfc": "3.2.33"
   },
   "stripes": {
     "actsAs": [
