--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "prop-types": "^15.6.2",
     "react-final-form": "^6.3.0",
     "react-final-form-arrays": "^3.1.0",
+    "react-query": "^3.39.1",
     "react-router-prop-types": "^1.0.4",
     "redux-actions": "^2.2.1",
     "redux-observable": "^1.2.0"
@@ -166,7 +167,8 @@
           "kb-ebsco.kb-credentials.holdings-load-all.post",
           "kb-ebsco.kb-credentials.holdings-load.post",
           "kb-ebsco.kb-credentials.holdings-load.status.item.get",
-          "kb-ebsco.kb-credentials.proxy-types.collection.get"
+          "kb-ebsco.kb-credentials.proxy-types.collection.get",
+          "data-export.job.item.post"
         ]
       },
       {
