UIEH-1169: new permissions
Settings (eholdings): View Usage Consolidation API credentials is extended with new permissions to fetch uc-credentials-client-id and uc-credentials-client-secret.

--- a/package.json
+++ b/package.json
@@ -330,7 +330,9 @@
           "ui-eholdings.settings.enabled",
           "kb-ebsco.kb-credentials.uc.item.get",
           "kb-ebsco.currencies.collection.get",
-          "kb-ebsco.uc-credentials.item.get"
+          "kb-ebsco.uc-credentials.item.get",
+          "kb-ebsco.uc-credentials.client-id.get",
+          "kb-ebsco.uc-credentials.client-secret.get"
         ]
       },
       {
