UIEH-1355: Extend the 'Settings (eHoldings): View settings' permission to view the 'Root proxy' settings and 'Knowledge Base' details

--- a/package.json
+++ b/package.json
@@ -183,7 +183,9 @@
         "visible": false,
         "subPermissions": [
           "module.eholdings.enabled",
-          "settings.enabled"
+          "settings.enabled",
+          "kb-ebsco.kb-credentials.root-proxy.get",
+          "kb-ebsco.kb-credentials.item.get"
         ]
       },
       {
