--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
       {
         "permissionName": "ui-eholdings.settings.kb.view",
         "subPermissions": [
+          "settings.enabled",
           "kb-ebsco.kb-credentials.collection.get",
           "kb-ebsco.kb-credentials.item.get"
         ]
