--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "okapiInterfaces": {
       "eholdings": "3.0",
       "tags": "1.0",
-      "erm": "1.0 2.0 3.0 4.0 5.0 6.0"
+      "erm": "1.0 2.0 3.0 4.0 5.0 6.0 7.0"
     },
     "permissionSets": [
       {
