--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/eholdings",
-  "version": "9.1.1",
+  "version": "10.0.0",
   "description": "FOLIO UI module for eHoldings",
   "main": "src/index.js",
   "repository": "https://github.com/folio-org/ui-eholdings",
@@ -98,7 +98,7 @@
       }
     ],
     "okapiInterfaces": {
-      "eholdings": "3.0",
+      "eholdings": "4.0",
       "tags": "1.0",
       "erm": "1.0 2.0 3.0 4.0 5.0 6.0 7.0"
     },
@@ -181,7 +181,7 @@
           "settings.eholdings.enabled",
           "module.eholdings.enabled",
           "kb-ebsco.kb-credentials.collection.get",
-          "kb-ebsco.kb-credentials.item.get"
+          "kb-ebsco.kb-credentials.key.item.get"
         ]
       },
       {
@@ -321,7 +321,7 @@
         "visible": true,
         "subPermissions": [
           "ui-eholdings.settings.kb.view",
-          "kb-ebsco.kb-credentials.uc.item.get",
+          "kb-ebsco.kb-credentials.uc.key.item.get",
           "kb-ebsco.currencies.collection.get",
           "kb-ebsco.uc-credentials.item.get",
           "kb-ebsco.uc-credentials.client-id.get",
