--- a/package.json
+++ b/package.json
@@ -222,7 +222,7 @@
         ]
       },
       {
-        "permissionName": "ui-eholdings.package-title.execute",
+        "permissionName": "ui-eholdings.package-title.select-unselect.execute",
         "displayName": "eHoldings: Can select/unselect packages and titles to/from your holdings",
         "visible": true,
         "subPermissions": [
@@ -244,7 +244,7 @@
         ]
       },
       {
-        "permissionName": "ui-eholdings.titles-packages.manage",
+        "permissionName": "ui-eholdings.titles-packages.create-delete.manage",
         "displayName": "eHoldings: Can create and delete custom packages and titles",
         "visible": true,
         "subPermissions": [
