UIEH-1436: Rename permissions to match the naming convention. (#1743)

--- a/package.json
+++ b/package.json
@@ -147,7 +147,8 @@
         ]
       },
       {
-        "permissionName": "ui-eholdings.app.enabled",
+        "permissionName": "ui-eholdings.app.view",
+        "replaces": ["ui-eholdings.app.enabled"],
         "subPermissions": [
           "module.eholdings.enabled"
         ],
@@ -222,8 +223,9 @@
         ]
       },
       {
-        "permissionName": "ui-eholdings.package-title.select-unselect",
+        "permissionName": "ui-eholdings.package-title.select-unselect.execute",
         "displayName": "eHoldings: Can select/unselect packages and titles to/from your holdings",
+        "replaces": ["ui-eholdings.package-title.select-unselect"],
         "visible": true,
         "subPermissions": [
           "module.eholdings.enabled",
@@ -244,8 +246,9 @@
         ]
       },
       {
-        "permissionName": "ui-eholdings.titles-packages.create-delete",
+        "permissionName": "ui-eholdings.titles-packages.create-delete.manage",
         "displayName": "eHoldings: Can create and delete custom packages and titles",
+        "replaces": ["ui-eholdings.titles-packages.create-delete"],
         "visible": true,
         "subPermissions": [
           "module.eholdings.enabled",
