update stripes deps and react-intl for sunflower

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint ./ && stylelint \"src/**/*.css\"",
     "eslint": "eslint ./",
     "stylelint": "stylelint \"src/**/*.css\"",
-    "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-eholdings ./translations/ui-eholdings/compiled",
+    "formatjs-compile": "stripes translate compile",
     "build-mod-descriptor": "stripes mod descriptor --full --strict | jq '.[]' > module-descriptor.json "
   },
   "husky": {
@@ -24,12 +24,11 @@
     }
   },
   "devDependencies": {
-    "@folio/eslint-config-stripes": "^7.0.0",
-    "@folio/jest-config-stripes": "^2.0.0",
-    "@folio/stripes": "^9.0.0",
-    "@folio/stripes-cli": "^3.0.0",
-    "@folio/stripes-core": "^10.0.0",
-    "@formatjs/cli": "^6.1.3",
+    "@folio/eslint-config-stripes": "^8.0.0",
+    "@folio/jest-config-stripes": "^3.0.0",
+    "@folio/stripes": "^10.0.0",
+    "@folio/stripes-cli": "^4.0.0",
+    "@folio/stripes-core": "^11.0.0",
     "axe-core": "~4.1.4",
     "eslint-plugin-jest": "^24.1.3",
     "history": "^5.0.0",
@@ -41,7 +40,7 @@
     "qs": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.4.4",
+    "react-intl": "^7.1.5",
     "react-redux": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.5.0",
@@ -71,10 +70,10 @@
     "redux-observable": "^1.2.0"
   },
   "peerDependencies": {
-    "@folio/stripes": "^9.0.0",
+    "@folio/stripes": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.4.4",
+    "react-intl": "^7.1.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
