FOLIO-4308 make erm instance optional

--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
     ],
     "okapiInterfaces": {
       "eholdings": "4.0",
-      "tags": "1.0",
+      "tags": "1.0"
+    },
+    "optionalOkapiInterfaces": {
       "erm": "1.0 2.0 3.0 4.0 5.0 6.0 7.0"
     },
     "permissionSets": [
